--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
     "prestart": "npm run build",
     "start": "node ./dist/cli/main.js",
     "precommit": "lint-staged",
@@ -35,7 +36,9 @@
     "color-name": "^1.1.4",
     "got": "^9.6.0",
     "node-hid": "^0.7.9",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "rgb-to-hsl": "0.0.3",
+    "tplink-smarthome-api": "^2.0.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
@@ -48,6 +51,7 @@
     "husky": "^3.0.1",
     "lint-staged": "^9.2.0",
     "prettier": "^1.18.2",
+    "rimraf": "^3.0.0",
     "typescript": "^3.5.3"
   },
   "bin": {
