--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blync-party",
+  "name": "kasa-party",
   "version": "0.1.5",
   "description": "",
   "main": "dist/index.js",
@@ -20,15 +20,13 @@
     ]
   },
   "keywords": [
-    "blync",
-    "blynclight",
-    "embrava",
-    "party",
+    "kasa",
+    "smart light",
+    "tp-link",
     "led",
-    "light",
-    "productivity"
+    "light"
   ],
-  "author": "",
+  "author": "Johnny Reina",
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.5",
@@ -55,6 +53,6 @@
     "typescript": "^3.5.3"
   },
   "bin": {
-    "blync-party": "./dist/cli/main.js"
+    "kasa-party": "./dist/cli/main.js"
   }
 }
